--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "version": 2,
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
   "framework": "nextjs",
@@ -12,5 +13,8 @@
     "app/api/test/route.ts": {
       "maxDuration": 10
     }
+  },
+  "env": {
+    "GEMINI_API_KEY": "@gemini_api_key"
   }
 }
