Fix PDF generation for Vercel: replace puppeteer with puppeteer-core + chrome-aws-lambda

--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
+    "chrome-aws-lambda": "^10.1.0",
     "marked": "^9.1.6",
     "next": "^14.0.0",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^4.0.379",
-    "puppeteer": "^24.17.1",
+    "puppeteer-core": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "8.0.7",
