--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
   "framework": "nextjs",
   "functions": {
     "app/api/generate-pdf/route.ts": {
-      "maxDuration": 30
+      "maxDuration": 30,
+      "memory": 1024
     },
     "app/api/health/route.ts": {
       "maxDuration": 10
