--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.16.0",
+    "@sparticuz/chromium": "^138.0.2",
     "@tiptap/extension-code-block": "^2.1.13",
     "@tiptap/extension-table": "^2.1.13",
     "@tiptap/extension-table-cell": "^2.1.13",
@@ -18,7 +19,6 @@
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
-    "chrome-aws-lambda": "^10.1.0",
     "marked": "^9.1.6",
     "next": "^14.0.0",
     "pdf-parse": "^1.1.1",
