--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.2",
     "marked": "^9.1.6",
     "next": "^14.0.0",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^4.0.379",
     "puppeteer-core": "^10.4.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "8.0.7",
