--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,7 @@
     }
   },
   "env": {
-    "GEMINI_API_KEY": "@gemini_api_key"
+    "GEMINI_API_KEY": "@gemini_api_key",
+    "BROWSERLESS_API_KEY": "@browserless_api_key"
   }
 }
