Replace server-side PDF generation with client-side window.print()
- Remove browserless.io dependency and API calls
- Implement window.print() for PDF generation
- Open styled HTML in new window for printing
- Update button text from 'Download PDF' to 'Print PDF'
- Remove BROWSERLESS_API_KEY from environment variables
- Update documentation to reflect print-based approach
- Simplify deployment by removing external PDF service dependency

--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,6 @@
     }
   },
   "env": {
-    "GEMINI_API_KEY": "@gemini_api_key",
-    "BROWSERLESS_API_KEY": "@browserless_api_key"
+    "GEMINI_API_KEY": "@gemini_api_key"
   }
 }
