--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.16.0",
+    "@react-pdf/renderer": "^4.3.0",
     "@tiptap/extension-code-block": "^2.1.13",
     "@tiptap/extension-table": "^2.1.13",
     "@tiptap/extension-table-cell": "^2.1.13",
